# SAE-G

./: .gitignore  BUILD_GUIDE.md  Cargo.toml  DEVELOPMENT_GUIDE.md  GSAE_TASK_LEVEL_TODO_CHECKLIST.md  PHASE_GATE_CHECKS.md  README.md  RUST_TEST_SCAFFOLDS.md  TODO_CHECKLIST.md  WITNESS_REPORT_TEMPLATES.md
artifacts/demo/: frozen_model.json
artifacts/demo/gpt2_small/: gpt2_small_demo.json
artifacts/demo/witness/gsae-1-chart/: report.json  report.md
artifacts/demo/witness/gsae-2-metric/: report.json  report.md
artifacts/demo/witness/gsae-3-gauge/: report.json  report.md
artifacts/demo/witness/gsae-4-transport/: report.json  report.md
artifacts/demo/witness/gsae-5-hypergraph/: report.json  report.md
artifacts/demo/witness/gsae-6-hyperpath/: report.json  report.md
artifacts/gates/: witness-coverage-matrix.md
crates/gsae-1-chart/: Cargo.toml
crates/gsae-1-chart/src/: lib.rs
crates/gsae-1-chart/tests/: witness_chart.rs
crates/gsae-2-metric/: Cargo.toml
crates/gsae-2-metric/src/: lib.rs
crates/gsae-2-metric/tests/: witness_metric.rs
crates/gsae-3-gauge/: Cargo.toml
crates/gsae-3-gauge/src/: lib.rs
crates/gsae-3-gauge/tests/: witness_gauge.rs
crates/gsae-4-transport/: Cargo.toml
crates/gsae-4-transport/src/: lib.rs
crates/gsae-4-transport/tests/: witness_transport.rs
crates/gsae-5-hypergraph/: Cargo.toml
crates/gsae-5-hypergraph/src/: lib.rs
crates/gsae-5-hypergraph/tests/: witness_hypergraph.rs
crates/gsae-6-hyperpath/: Cargo.toml
crates/gsae-6-hyperpath/src/: lib.rs
crates/gsae-6-hyperpath/tests/: witness_hyperpath.rs
crates/gsae-artifacts/: Cargo.toml
crates/gsae-artifacts/src/: lib.rs
crates/gsae-atlas-manager/: Cargo.toml
crates/gsae-atlas-manager/src/: lib.rs
crates/gsae-atlas-router/: Cargo.toml
crates/gsae-atlas-router/src/: lib.rs
crates/gsae-atlas-router/tests/: router.rs
crates/gsae-autodiff/: Cargo.toml
crates/gsae-autodiff/src/: lib.rs
crates/gsae-autodiff/tests/: derivatives.rs
crates/gsae-benchmarks/: Cargo.toml
crates/gsae-benchmarks/src/: lib.rs
crates/gsae-chart-core/: Cargo.toml
crates/gsae-chart-core/src/: lib.rs
crates/gsae-chart-core/tests/: chart.rs
crates/gsae-cli/: Cargo.toml
crates/gsae-cli/src/: lib.rs
crates/gsae-core-types/: Cargo.toml
crates/gsae-core-types/src/: lib.rs
crates/gsae-core-types/tests/: core_types.rs
crates/gsae-demo/: Cargo.toml
crates/gsae-demo/src/: main.rs
crates/gsae-geodesics/: Cargo.toml
crates/gsae-geodesics/src/: lib.rs
crates/gsae-geodesics/tests/: geodesic.rs
crates/gsae-linalg/: Cargo.toml
crates/gsae-linalg/src/: lib.rs
crates/gsae-linalg/tests/: spd.rs
crates/gsae-multilayer-runtime/: Cargo.toml
crates/gsae-multilayer-runtime/src/: lib.rs
crates/gsae-objective/: Cargo.toml
crates/gsae-objective/src/: lib.rs
crates/gsae-objective/tests/: objective.rs
crates/gsae-pullback-metric/: Cargo.toml
crates/gsae-pullback-metric/src/: lib.rs
crates/gsae-pullback-metric/tests/: pullback.rs
crates/gsae-py/: Cargo.toml
crates/gsae-py/src/: lib.rs
crates/gsae-state-geometry/: Cargo.toml
crates/gsae-state-geometry/src/: lib.rs
crates/gsae-state-geometry/tests/: metric.rs
crates/gsae-training/: Cargo.toml
crates/gsae-training/src/: lib.rs
crates/gsae-training/tests/: no_math_mutation.rs
scripts/: gpt2_small_demo.py
