[package]
name = "gsae-2-metric"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gsae-core-types = { workspace = true }
gsae-chart-core = { workspace = true }
gsae-state-geometry = { workspace = true }
gsae-pullback-metric = { workspace = true }
gsae-geodesics = { workspace = true }
gsae-linalg = { workspace = true }
