[package]
name = "gsae-geodesics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gsae-core-types = { workspace = true }
gsae-linalg = { workspace = true }
gsae-pullback-metric = { workspace = true }

[dev-dependencies]
gsae-chart-core = { workspace = true }
gsae-state-geometry = { workspace = true }
